==> AddictiveInstruments/ADIOS/mios32/STM32G0xx/mios32_iic.c <==
#include <mios32.h>
#define MIOS32_IIC0_SCL_PORT    GPIOB
#define MIOS32_IIC0_SCL_PIN     LL_GPIO_PIN_10
#define MIOS32_IIC0_SCL_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_10, GPIO_AF_I2C2); }
#define MIOS32_IIC0_SDA_PORT    GPIOB
#define MIOS32_IIC0_SDA_PIN     LL_GPIO_PIN_11
#define MIOS32_IIC0_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_11, GPIO_AF_I2C2); }
#define MIOS32_IIC1_SCL_PORT    GPIOB
#define MIOS32_IIC1_SCL_PIN     LL_GPIO_PIN_6
#define MIOS32_IIC1_SCL_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_6, GPIO_AF_I2C1); }
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     LL_GPIO_PIN_9
#define MIOS32_IIC1_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_9, GPIO_AF_I2C1); }
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     LL_GPIO_PIN_7
#define MIOS32_IIC1_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_7, GPIO_AF_I2C1); }
#define MIOS32_IIC0_DUTYCYCLE I2C_DutyCycle_2
#define MIOS32_IIC1_DUTYCYCLE I2C_DutyCycle_2

s32 MIOS32_IIC_Init(u32 mode)
{
  int i;

  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

  // configure IIC pins in open drain mode
  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = GPIO_Mode_AF;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  MIOS32_IIC0_SCL_AF;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);
  MIOS32_IIC0_SDA_AF;

#if MIOS32_IIC_NUM >= 2
  GPIO_InitStructure.Pin = MIOS32_IIC1_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC1_SCL_PORT, &GPIO_InitStructure);
  MIOS32_IIC1_SCL_AF;

  GPIO_InitStructure.Pin = MIOS32_IIC1_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC1_SDA_PORT, &GPIO_InitStructure);
  MIOS32_IIC1_SDA_AF;
#endif

  for(i=0; i<MIOS32_IIC_NUM; ++i) {
    // configure I2C peripheral
    MIOS32_IIC_InitPeripheral(i);

    // now accessible for other tasks
    iic_rec[i].iic_semaphore = 0;
    iic_rec[i].last_transfer_error = 0;
  }

  // configure and enable I2C2 interrupts
  MIOS32_IRQ_Install(I2C2_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);  
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#endif

  MIOS32_IRQ_Install(I2C2_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#endif

  return 0; // no error
}

s32 MIOS32_IIC_TransferWait(u8 iic_port)
{
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record
  u32 repeat_ctr = MIOS32_IIC_TIMEOUT_VALUE;
  u16 last_buffer_ix = iicx->buffer_ix;

  if( iic_port >= MIOS32_IIC_NUM )
    return MIOS32_IIC_ERROR_INVALID_PORT;

  while( --repeat_ctr > 0 ) {
    // check if buffer index has changed - if so, reload repeat counter
    if( iicx->buffer_ix != last_buffer_ix ) {
      repeat_ctr = MIOS32_IIC_TIMEOUT_VALUE;
      last_buffer_ix = iicx->buffer_ix;
    }

    // get transfer state
    s32 check_state = MIOS32_IIC_TransferCheck(iic_port);

    // exit if transfer finished or error detected
    if( check_state <= 0 ) {
      if( check_state < 0 )
	iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
      return check_state;
    }
  }

  // timeout error - something is stalling...

#if 0
  // send stop condition
  I2C_GenerateSTOP(iicx->base, ENABLE);
#else
  // added by wackazong
  // see also http://midibox.org/forums/topic/15770-sda-stuck-low-on-i2c-transfer/
  // try to deblock a SDA line that is stuck low by bit-banging out a clock signal
  // and waiting until the send buffer of any slave is empty

  // disable interrupts
  I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);

  I2C_Cmd(I2C2, DISABLE);
  LL_GPIO_InitTypeDef GPIO_InitStructure;

  // reconfigure IIC pins to push pull
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

  u32 i;
  for (i=0; i<16; i++) {
    /*Reset the SDA Pin*/
    GPIO_ResetBits(GPIOB, MIOS32_IIC0_SDA_PIN);
    MIOS32_DELAY_Wait_uS(1000);
    /*Reset the SCL Pin*/
    GPIO_ResetBits(GPIOB, MIOS32_IIC0_SCL_PIN);
    MIOS32_DELAY_Wait_uS(1000);
    /*Set the SCL Pin*/
    GPIO_SetBits(GPIOB, MIOS32_IIC0_SCL_PIN);
    MIOS32_DELAY_Wait_uS(1000);
    /*Set the SDA Pin*/
    GPIO_SetBits(GPIOB, MIOS32_IIC0_SDA_PIN);
    MIOS32_DELAY_Wait_uS(1000);
  }

  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = GPIO_Mode_AF;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

  I2C_Cmd(I2C2, ENABLE); 
#endif

  // re-initialize peripheral
  MIOS32_IIC_InitPeripheral(iic_port);

  // release semaphore (!)
  iicx->iic_semaphore = 0;

  return (iicx->last_transfer_error=MIOS32_IIC_ERROR_TIMEOUT);
}
